# rsEvilAlligator

./: .gitignore  Cargo.toml  README.md
src/: component.rs  enemy.rs  entity.rs  healing.rs  hero.rs  hud.rs  main.rs  music.rs  resources.rs  system.rs
static/: evil_alligator.atlas  evil_alligator.tpproj  scene.json
