[package]
name = "evil_alligator"
version = "0.3.0"
authors = ["Ricardo Ribeiro <ricardo@souzaribeiro.com>"]
edition = "2018"
categories = ["game-engines"]
homepage = "https://github.com/rsribeiro/ea_engine/"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsribeiro/ea_engine/"

[dependencies.eangine]
version = "0.1.0"
path = "../EAngine"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.rand]
version = "0.6.5"

[target.'cfg(target_arch = "wasm32")'.dependencies.rand]
version = "0.6.5"
features = ["stdweb"]

[dependencies]
specs = "0.14.3"

[dependencies.quicksilver]
version = "0.3.12"
default-features = false
features = ["fonts", "sounds"]

[patch.crates-io]
quicksilver = { path = "../quicksilver" }

[profile.release]
lto = true
opt-level = 's' #web=696KB/exe=1796KB
#opt-level = 'z' #web=872KB/exe=1639KB