[package]
name = "evil_alligator"
version = "0.5.0"
authors = ["Ricardo Ribeiro <ricardo@souzaribeiro.com>"]
edition = "2018"
categories = ["game"]
homepage = "https://github.com/rsribeiro/rsEvilAlligator/"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsribeiro/rsEvilAlligator/"

[dependencies.eangine]
version = "0.3.0"

[patch.crates-io]
quicksilver = { path = "../quicksilver" }
eangine = { path = "../EAngine" }

[profile.release]
lto = true
opt-level = 's' #web=696KB/exe=1796KB
#opt-level = 'z' #web=872KB/exe=1639KB